tests/tests/snapshots/golden__gen__rust__ontology-growth.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "media-ops"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service MediaOps`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
redis = { version = "0.27", features = ["tokio-comp"] }
async-nats = "0.38"
futures = "0.3"
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/media-ops /usr/local/bin/app
COPY --from=build /src/target/release/workers /usr/local/bin/workers

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# MediaOps

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Workers run separately:

```sh
cargo run --bin workers
```

Or bring up the full stack (API, workers, Postgres, Redis, NATS):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/media_ops
      REDIS_URL: redis://cache:6379/0
      NATS_URL: nats://queue:4222
    depends_on:
      - db
      - cache
      - queue

  workers:
    build: .
    command: ["workers"]
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/media_ops
      REDIS_URL: redis://cache:6379/0
      NATS_URL: nats://queue:4222
    depends_on:
      - db
      - cache
      - queue

  db:
    image: postgres:16
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: media_ops
    volumes:
      - db-data:/var/lib/postgresql/data

  cache:
    image: redis:7

  queue:
    image: nats:2

volumes:
  db-data:
============================================================
src/bin/workers.rs
============================================================
//! Runs every worker in one process. Generated by CIaC.

use media_ops::{config::Config, state::AppState, workers};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    media_ops::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    tokio::try_join!(
        workers::indexer::run(state.clone()),
        workers::notifier::run(state.clone()),
    )?;
    Ok(())
}
============================================================
src/config.rs
============================================================
//! Runtime configuration for MediaOps. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub database_url: String,
    pub redis_url: String,
    pub nats_url: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            database_url: env_or(
                "DATABASE_URL",
                "postgres://postgres:postgres@localhost:5432/media_ops",
            ),
            redis_url: env_or("REDIS_URL", "redis://localhost:6379/0"),
            nats_url: env_or("NATS_URL", "nats://localhost:4222"),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! MediaOps — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod schemas;
pub mod services;
pub mod workers;
============================================================
src/main.rs
============================================================
use media_ops::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    media_ops::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod upload;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(upload::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/routes/upload.rs
============================================================
//! Request pipeline for `api Upload`. Generated by CIaC.
//!
//! Pipeline: StoreVideo -> publish media_ops.uploaded -> Return


use axum::extract::State;
use axum::routing::put;
use axum::{Json, Router};

use crate::error::AppError;
use crate::schemas::Video;
use crate::services::store_video::StoreVideo;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/videos", put(upload))
}

async fn upload(
    State(state): State<AppState>,
    Json(payload): Json<Video>,
) -> Result<Json<serde_json::Value>, AppError> {
    let result = payload;

    let result = StoreVideo::new(&state).handle(result).await?;
    state
        .queue
        .publish("media_ops.uploaded", serde_json::to_vec(&result)?.into())
        .await?;
    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/schemas.rs
============================================================
//! Data schemas from the program's `record` declarations. Generated by CIaC.

use serde::{Deserialize, Serialize};


#[derive(Debug, Clone, Copy, PartialEq, Eq, Serialize, Deserialize)]
pub enum VideoStatus {
    Ready,
    Failed,
}

impl VideoStatus {
    /// The wire/storage form of the variant.
    pub fn as_str(&self) -> &'static str {
        match self {
            VideoStatus::Ready => "Ready",
            VideoStatus::Failed => "Failed",
        }
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Video {
    pub id: String,
    pub title: String,
    pub status: VideoStatus,
}

============================================================
src/services/index_video.rs
============================================================
//! Handler for the `IndexVideo` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `IndexVideo` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::schemas::Video;
use crate::state::AppState;

/// Business logic for the `IndexVideo` step.
///
/// Capability bindings:
/// - search: catalog
/// - external_http: billing
#[derive(Debug)]
pub struct IndexVideo {
}

impl IndexVideo {
    pub fn new(_state: &AppState) -> Self {
        Self {}
    }

    pub async fn handle(&self, payload: Video) -> anyhow::Result<Video> {
        // TODO: implement the IndexVideo step.
        Ok(payload)
    }
}
============================================================
src/services/mod.rs
============================================================
//! Business-logic handlers. Generated once by CIaC — this is where your
//! code goes.

pub mod store_video;
pub mod index_video;
pub mod notify_user;
============================================================
src/services/notify_user.rs
============================================================
//! Handler for the `NotifyUser` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `NotifyUser` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::schemas::Video;
use crate::state::AppState;

/// Business logic for the `NotifyUser` step.
///
/// Capability bindings:
/// - email: transactional
#[derive(Debug)]
pub struct NotifyUser {
}

impl NotifyUser {
    pub fn new(_state: &AppState) -> Self {
        Self {}
    }

    pub async fn handle(&self, payload: Video) -> anyhow::Result<Video> {
        // TODO: implement the NotifyUser step.
        Ok(payload)
    }
}
============================================================
src/services/store_video.rs
============================================================
//! Handler for the `StoreVideo` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `StoreVideo` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::schemas::Video;
use crate::state::AppState;

/// Business logic for the `StoreVideo` step.
///
/// Capability bindings:
/// - db: main
/// - cache: hot
/// - object_store: media
#[derive(Debug)]
pub struct StoreVideo<'a> {
    pub db: &'a sqlx::PgPool,
    pub cache: &'a redis::Client,
}

impl<'a> StoreVideo<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
            cache: &state.cache,
        }
    }

    pub async fn handle(&self, payload: Video) -> anyhow::Result<Video> {
        // TODO: implement the StoreVideo step.
        Ok(payload)
    }
}
============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    /// Lazy pool: connections are established on first use, so the server
    /// starts (and compiles) without a running database.
    pub db: sqlx::PgPool,
    pub cache: redis::Client,
    pub queue: async_nats::Client,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let db = sqlx::postgres::PgPoolOptions::new().connect_lazy(&config.database_url)?;
        let cache = redis::Client::open(config.redis_url.as_str())?;
        let queue = async_nats::connect(&config.nats_url).await?;
        Ok(Self {
            config,
            db,
            cache,
            queue,
        })
    }
}
============================================================
src/workers/indexer.rs
============================================================
//! Worker pipeline for `worker Indexer`. Generated by CIaC.
//!
//! Consumes `media_ops.uploaded` in queue group `indexer`
//! so replicas of this worker load-balance messages between them.

use futures::StreamExt;
use futures::future::try_join_all;

use crate::schemas::Video;
use crate::services::index_video::IndexVideo;
use crate::state::AppState;

pub const SUBJECT: &str = "media_ops.uploaded";
pub const QUEUE_GROUP: &str = "indexer";
pub const CONCURRENCY: usize = 1;
pub const MAX_RETRIES: u32 = 0;

pub async fn run(state: AppState) -> anyhow::Result<()> {
    let tasks = (0..CONCURRENCY).map(|worker_index| {
        let state = state.clone();
        tokio::spawn(async move { consume(state, worker_index).await })
    });
    for result in try_join_all(tasks).await? {
        result?;
    }
    Ok(())
}

async fn consume(state: AppState, worker_index: usize) -> anyhow::Result<()> {
    let mut subscription = state
        .queue
        .queue_subscribe(SUBJECT, QUEUE_GROUP.to_owned())
        .await?;
    tracing::info!(subject = SUBJECT, worker_index, "worker Indexer consuming");
    while let Some(message) = subscription.next().await {
        let payload: Video = match serde_json::from_slice(&message.payload) {
            Ok(payload) => payload,
            Err(err) => {
                tracing::warn!(?err, "discarding malformed message");
                continue;
            }
        };
        if let Err(err) = handle_message(&state, payload).await {
            tracing::error!(?err, "message processing failed after retries");
        }
    }
    Ok(())
}



async fn handle_message(state: &AppState, payload: Video) -> anyhow::Result<()> {
    for attempt in 0..=MAX_RETRIES {
        match handle_message_once(state, payload.clone()).await {
            Ok(()) => return Ok(()),
            Err(err) if attempt < MAX_RETRIES => {
                tracing::warn!(?err, attempt, "message processing failed; retrying");
            }
            Err(err) => return Err(err),
        }
    }
    Ok(())
}

async fn handle_message_once(state: &AppState, payload: Video) -> anyhow::Result<()> {
    let result = payload;

    let result = IndexVideo::new(state).handle(result).await?;
    state
        .queue
        .publish("media_ops.indexed", serde_json::to_vec(&result)?.into())
        .await?;
    let _ = result;
    Ok(())
}
============================================================
src/workers/mod.rs
============================================================
//! Queue-driven workers. Generated by CIaC.
//!
//! Run them all with `cargo run --bin workers`.

pub mod indexer;
pub mod notifier;
============================================================
src/workers/notifier.rs
============================================================
//! Worker pipeline for `worker Notifier`. Generated by CIaC.
//!
//! Consumes `media_ops.indexed` in queue group `notifier`
//! so replicas of this worker load-balance messages between them.

use futures::StreamExt;
use futures::future::try_join_all;

use crate::schemas::Video;
use crate::services::notify_user::NotifyUser;
use crate::state::AppState;

pub const SUBJECT: &str = "media_ops.indexed";
pub const QUEUE_GROUP: &str = "notifier";
pub const CONCURRENCY: usize = 1;
pub const MAX_RETRIES: u32 = 0;

pub async fn run(state: AppState) -> anyhow::Result<()> {
    let tasks = (0..CONCURRENCY).map(|worker_index| {
        let state = state.clone();
        tokio::spawn(async move { consume(state, worker_index).await })
    });
    for result in try_join_all(tasks).await? {
        result?;
    }
    Ok(())
}

async fn consume(state: AppState, worker_index: usize) -> anyhow::Result<()> {
    let mut subscription = state
        .queue
        .queue_subscribe(SUBJECT, QUEUE_GROUP.to_owned())
        .await?;
    tracing::info!(subject = SUBJECT, worker_index, "worker Notifier consuming");
    while let Some(message) = subscription.next().await {
        let payload: Video = match serde_json::from_slice(&message.payload) {
            Ok(payload) => payload,
            Err(err) => {
                tracing::warn!(?err, "discarding malformed message");
                continue;
            }
        };
        if let Err(err) = handle_message(&state, payload).await {
            tracing::error!(?err, "message processing failed after retries");
        }
    }
    Ok(())
}



async fn handle_message(state: &AppState, payload: Video) -> anyhow::Result<()> {
    for attempt in 0..=MAX_RETRIES {
        match handle_message_once(state, payload.clone()).await {
            Ok(()) => return Ok(()),
            Err(err) if attempt < MAX_RETRIES => {
                tracing::warn!(?err, attempt, "message processing failed; retrying");
            }
            Err(err) => return Err(err),
        }
    }
    Ok(())
}

async fn handle_message_once(state: &AppState, payload: Video) -> anyhow::Result<()> {
    let result = payload;

    let result = NotifyUser::new(state).handle(result).await?;
    let _ = result;
    Ok(())
}
