tests/tests/snapshots/golden__gen__rust__ping.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "ping"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service Ping`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/ping /usr/local/bin/app

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# Ping

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Or bring up the full stack (API):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers and scheduled jobs | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
============================================================
src/config.rs
============================================================
//! Runtime configuration for Ping. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
}

impl Config {
    pub fn from_env() -> Self {
        Self {
        }
    }
}


============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! Ping — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod schemas;
============================================================
src/main.rs
============================================================
use ping::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    ping::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/echo.rs
============================================================
//! Request pipeline for `api Echo`. Generated by CIaC.
//!
//! Pipeline: Return


use axum::extract::State;
use axum::routing::post;
use axum::{Json, Router};

use crate::error::AppError;
use crate::schemas::Message;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/echo", post(echo))
}

async fn echo(
    State(state): State<AppState>,
    Json(payload): Json<Message>,
) -> Result<Json<serde_json::Value>, AppError> {
    let _ = &state;
    let result = payload;

    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod echo;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(echo::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/schemas.rs
============================================================
//! Data schemas from the program's `record` declarations. Generated by CIaC.

use serde::{Deserialize, Serialize};


#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Message {
    pub id: String,
    pub text: String,
}

============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        Ok(Self {
            config,
        })
    }
}
