tests/tests/snapshots/golden__gen__rust__realtime-progress.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "progress-feed"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service ProgressFeed`"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.38"
futures = "0.3"
async-stream = "0.3"
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/progress-feed /usr/local/bin/app

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# ProgressFeed

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Or bring up the full stack (API, NATS):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers and scheduled jobs | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    environment:
      NATS_URL: nats://queue:4222
    depends_on:
      - queue

  queue:
    image: nats:2
============================================================
src/config.rs
============================================================
//! Runtime configuration for ProgressFeed. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub nats_url: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            nats_url: env_or("NATS_URL", "nats://localhost:4222"),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! ProgressFeed — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod schemas;
============================================================
src/main.rs
============================================================
use progress_feed::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    progress_feed::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/channel_progress.rs
============================================================
//! Realtime channel `Progress`. Generated by CIaC.

use futures::StreamExt;

use crate::schemas::Video;
use crate::state::AppState;

pub const SUBJECT: &str = "progress_feed.transcoded";

fn payload_text(bytes: &[u8]) -> Option<String> {
    let payload: Video = serde_json::from_slice(bytes).ok()?;
    serde_json::to_string(&payload).ok()
}
use axum::extract::ws::{Message, WebSocket, WebSocketUpgrade};
use axum::extract::State;
use axum::response::IntoResponse;
use axum::routing::get;
use axum::Router;

pub fn router() -> Router<AppState> {
    Router::new().route("/channels/progress", get(progress))
}

async fn progress(
    State(state): State<AppState>,
    ws: WebSocketUpgrade,
) -> impl IntoResponse {
    ws.on_upgrade(move |socket| stream(socket, state))
}

async fn stream(mut socket: WebSocket, state: AppState) {
    let Ok(mut subscription) = state.queue.subscribe(SUBJECT.to_owned()).await else {
        return;
    };
    while let Some(message) = subscription.next().await {
        let Some(data) = payload_text(&message.payload) else {
            continue;
        };
        if socket.send(Message::Text(data.into())).await.is_err() {
            break;
        }
    }
}
============================================================
src/routes/complete.rs
============================================================
//! Request pipeline for `api Complete`. Generated by CIaC.
//!
//! Pipeline: publish progress_feed.transcoded -> Return


use axum::extract::State;
use axum::routing::post;
use axum::{Json, Router};

use crate::error::AppError;
use crate::schemas::Video;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/complete", post(complete))
}

async fn complete(
    State(state): State<AppState>,
    Json(payload): Json<Video>,
) -> Result<Json<serde_json::Value>, AppError> {
    let result = payload;

    state
        .queue
        .publish("progress_feed.transcoded", serde_json::to_vec(&result)?.into())
        .await?;
    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod complete;
pub mod channel_progress;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(complete::router())
        .merge(channel_progress::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/schemas.rs
============================================================
//! Data schemas from the program's `record` declarations. Generated by CIaC.

use serde::{Deserialize, Serialize};


#[derive(Debug, Clone, Copy, PartialEq, Eq, Serialize, Deserialize)]
pub enum VideoStatus {
    Ready,
    Failed,
}

impl VideoStatus {
    /// The wire/storage form of the variant.
    pub fn as_str(&self) -> &'static str {
        match self {
            VideoStatus::Ready => "Ready",
            VideoStatus::Failed => "Failed",
        }
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Video {
    pub id: String,
    pub status: VideoStatus,
}

============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    pub queue: async_nats::Client,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let queue = async_nats::connect(&config.nats_url).await?;
        Ok(Self {
            config,
            queue,
        })
    }
}
